Reduce the amount of style data we fetch in nsTextFrame::Reflow.  Bug 244651, r+sr=bzbarsky.